@@ -164,5 +164,24 @@ namespace MeGUI.core.details.mux
             }
             raiseEvent();
         }
+
+        private void chkForceStream_CheckedChanged(object sender, EventArgs e)
+        {
+            string strForceName = MeGUI.MainForm.Instance.Settings.AppendToForcedStreams;
+
+            if (String.IsNullOrEmpty(strForceName))
+                return;
+
+            if (chkForceStream.Checked && !subName.Text.EndsWith(strForceName))
+            {
+                if (!String.IsNullOrEmpty(subName.Text) && !subName.Text.EndsWith(" "))
+                    subName.Text += " ";
+                subName.Text += strForceName;
+            }
+            else if (!chkForceStream.Checked && subName.Text.EndsWith(strForceName))
+            {
+                subName.Text = (subName.Text.Substring(0, subName.Text.Length - strForceName.Length)).TrimEnd();
+            }
+        }
     }
 }
